[tool.poetry]
name = "enki-database"
version = "0.1.1"
description = "Python wrapper for reduced size english wikidata/wikipedia instance."
readme = "README.md"
repository = "https://github.com/harttraveller/enki-database"
authors = ["Hart Traveller <ruling_fiction.0b@icloud.com>"]
packages = [{ include = "enki" }]
include = [".include/**/*"]

[tool.poetry.dependencies]
python = ">3.9.7, <3.13"
sqlmodel = "^0.0.18"
typer = "^0.12.3"
rich = "^13.7.1"
pydantic = "^2.8.2"
httpx = "^0.27.0"
orjson = "^3.10.6"
tqdm = "^4.66.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
nbformat = "^5.10.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.scripts]
enki = "enki.cli:app"
